# rust-client

./: .gitignore  .gitlab-ci.yml  Cargo.toml  LICENSE  README.md  code_of_conduct.md
benches/: request_benchmark.rs
src/: app.rs  command.rs  error.rs  lib.rs  main.rs  presenter.rs  response.rs
tests/: verbs.rs
