[package]
name = "rust_client"
version = "0.2.1"
authors = ["Kellen Frodelius-Fujimoto <kellen@kellenfujimoto.com>"]
description = "A command line http client"
license-file = "LICENSE"
readme = "README.md"
repository = "https://gitlab.com/rakenodiax/rust-client"

[[bin]]
path = "src/main.rs"
name = "rc"

[dependencies]
clap = "2.32.0"
reqwest = "0.8.6"

[dev-dependencies]
mockito = "0.12.0"
criterion = "0.2.4"

[[bench]]
name = "request_benchmark"
harness = false